--- a/app/src/main/res/layout/selecionar_pacientes.xml
+++ b/app/src/main/res/layout/selecionar_pacientes.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_floating_material_dark"
-    tools:context="com.ibis.oxygen_monitor.Seleccionar"
+    tools:context=".Select"
     >
     <TextView
 
