--- a/app/src/main/res/layout/fragment_observacion.xml
+++ b/app/src/main/res/layout/fragment_observacion.xml
@@ -17,5 +17,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="200dp"
         android:calendarViewShown="false"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/valueTest"/>
 
 </RelativeLayout>
