--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -28,15 +28,17 @@
         android:text="Medium Text"
         android:id="@+id/edadPaciente"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView" />
+        android:layout_marginTop ="40dp"
+        android:layout_below="@+id/nombrePaciente"
+        android:layout_toLeftOf="@+id/nombrePaciente"
+        android:layout_toStartOf="@+id/nombrePaciente" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/contacto"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="40dp"
         android:layout_below="@+id/edadPaciente"
         android:layout_alignLeft="@+id/edadPaciente"
         android:layout_alignStart="@+id/edadPaciente" />
